# smiley-face-diffusion-site

./: .gitignore  README.md
back-end/: pyproject.toml
back-end/checkpoints/: latest.pt  step_001000.pt  step_002000.pt  step_003000.pt  step_004000.pt  step_005000.pt  step_006000.pt  step_007000.pt  step_008000.pt  step_009000.pt  step_010000.pt  step_011000.pt  step_012000.pt  step_013000.pt  step_014000.pt  step_015000.pt  step_016000.pt  step_017000.pt  step_018000.pt  step_019000.pt  step_020000.pt
back-end/diffusion_backend/: __init__.py  api.py  dataset.py  model.py  noise_schedule.py  sample.py  train.py  visualize_backward_diffusion.py  visualize_dataset.py  visualize_forward_diffusion.py
front-end/: index.html  package.json
front-end/src/: App.tsx  styles.css
front-end/src/components/: BackwardDiffusionDemo.tsx
